@@ -1,0 +1,5 @@
+module javatest.reflection {
+    requires javatest.core;
+
+    exports io.github.olib963.javatest.reflection;
+}
